--- a/works/hexed-holidays/index.html
+++ b/works/hexed-holidays/index.html
@@ -68,13 +68,11 @@
           <p class="work-header__description" style="margin-bottom: var(--space-lg;">
             Kyle and Cole visit a mysterious costume shop on Halloween, and nothing is ever the same again. One Gothic nightmare, one twisted Christmas miracle, and one Valentine's Day prisoner's dilemma—tales of transformation and terror where deals always cost more than expected. The hex never quite lets you go, and the year isn't over yet.
           </p>
-          <a href="../../works/pdfs/story-name.pdf" class="btn btn--secondary" style="width: 100%; margin-bottom: var(--space-md);" download="story-name.pdf">
-            <!--Download Author's Edition PDF -->
-            PDF Coming Soon!
+          <a href="../../works/pdfs/hexed-holidays.pdf" class="btn btn--secondary" style="width: 100%; margin-bottom: var(--space-md);" download="hexed-holidays.pdf">
+            Download Author's Edition PDF
           </a>
-          <a href="../../works/epubs/story-name.epub" class="btn btn--secondary" style="width: 100%;" download="story-name.epub">
-            <!--Download Author's Edition EPUB -->
-            EPUB Coming Soon!
+          <a href="../../works/epubs/hexed-holidays.epub" class="btn btn--secondary" style="width: 100%;" download="hexed-holidays.epub">
+            Download Author's Edition EPUB
           </a>
         </div>
       </div>
